<resources>
    <string name="app_name">SParticipant</string>
    <string name="intro">Introduction</string>
    <string name="textIntro">Hello! Welcome to the app, this is how you keep in touch with school\'s event!</string>
    <string name="eventBtn">Events</string>
    <string name="socialBtn">Social Media</string>
    <string name="aboutInfo">About Us</string>
    <string name="Info">SParticipation is an app designed to let you follow the events different Schools in SP has to offer!
    This Application is made by Lex and Brandon as a part of MAPP CA2.</string>
    <string name="socialMedia">The links should be here</string>
    <string name="title_activity_settings">Settings</string>
    <string name="darkMode">Dark Mode</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="campBtn">Camps</string>
    <string name="agmBtn">AGMs</string>
    <string name="talkBtn">Talks</string>
    <string name="title_activity_maps">Map</string>

    <!-- Map name -->
    <string name="normal_map">Normal</string>
    <string name="hybrid_map">Hybrid</string>
    <string name="satellite_map">Satellite</string>
    <string name="terrain_map">Terrain</string>
</resources>
