<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="5dp"
        android:fontFamily="sans-serif-black"
        android:textSize="18dp"
        android:id="@+id/intro"
        android:text="@string/intro" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="5dp"
        android:fontFamily="sans-serif-black"
        android:layout_below="@id/intro"
        android:id="@+id/textIntro"
        android:text="@string/textIntro"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textIntro"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:src="@drawable/sp1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="21dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_below="@+id/logo"
        android:id="@+id/eventBtn"
        android:text="@string/eventBtn"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="21dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:onClick="launchSocialMedia"
        android:layout_below="@+id/eventBtn"
        android:id="@+id/socialBtn"
        android:text="@string/socialBtn"
        />

</RelativeLayout>