<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Events">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="38dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:onClick="launchCamp_Events"
        android:id="@+id/campBtn"
        android:text="@string/campBtn"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="8dp"
        android:onClick="launchAGM_Events"
        android:layout_below="@id/campBtn"
        android:id="@+id/agmBtn"
        android:text="@string/agmBtn" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="8dp"
        android:onClick="launchTalks_Events"
        android:layout_below="@id/agmBtn"
        android:id="@+id/talkBtn"
        android:text="@string/talkBtn" />

</RelativeLayout>